--- a/arch/arm/configs/aspeed_g6_defconfig
+++ b/arch/arm/configs/aspeed_g6_defconfig
@@ -133,6 +133,7 @@ CONFIG_ASPEED_ESPI=y
 CONFIG_ASPEED_ESPI_FLASH=y
 CONFIG_ASPEED_ESPI_OOB=y
 CONFIG_ASPEED_ESPI_PERIPHERAL=y
+CONFIG_ASPEED_ESPI_MMBI=y
 CONFIG_ASPEED_ESPI_VW=y
 CONFIG_ASPEED_LPC_SNOOP=y
 CONFIG_ASPEED_LPC_MBOX=y
