--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -333,7 +333,7 @@
 			};
 			
 			syscon: syscon@1e6e2000 {
-				compatible = "aspeed,ast2600-scu", "syscon", "simple-mfd";
+				compatible = "aspeed,aspeed-scu", "aspeed,ast2600-scu", "syscon", "simple-mfd";
 				reg = <0x1e6e2000 0x1000>;
 				ranges = <0 0x1e6e2000 0x1000>;
 				#address-cells = <1>;
@@ -391,6 +391,17 @@
 				reset-names = "jtag";
 				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_jtagm_default>;
+				status = "disabled";
+			};
+
+			gfx: display@1e6e6000 {
+				compatible = "aspeed,ast2600-gfx", "syscon";
+				reg = <0x1e6e6000 0x1000>;
+				reg-io-width = <4>;
+				clocks = <&syscon ASPEED_CLK_GATE_D1CLK>;
+				resets = <&syscon ASPEED_RESET_CRT>, <&syscon ASPEED_RESET_GRAPHICS>;
+				reset-names = "crt", "engine";
+				interrupts = <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>;
 				status = "disabled";
 			};
 
