soc: aspeed: jtag: Add jtag driver
The hw of jtag master is embedded in AST2500/AST2600 soc and it can send
jtag operation with hw/sw mode.

Signed-off-by: Billy Tsai <billy_tsai@aspeedtech.com>

--- a/drivers/soc/aspeed/Kconfig
+++ b/drivers/soc/aspeed/Kconfig
@@ -91,6 +91,12 @@ config ASPEED_ESPI_OOB
 	help
 	  Control Aspeed eSPI out-of-band channel driver
 
+config ASPEED_JTAG
+	tristate "ASPEED JTAG Controller"
+	default n
+	help
+	  Driver for JTAG Controller
+
 config ASPEED_ESPI_FLASH
 	tristate "Aspeed eSPI flash channel driver"
 	depends on ASPEED_ESPI
