--- a/drivers/soc/aspeed/Makefile
+++ b/drivers/soc/aspeed/Makefile
@@ -6,6 +6,7 @@ obj-$(CONFIG_ASPEED_LPC_PCC)	+= aspeed-lpc-pcc.o
 obj-$(CONFIG_ASPEED_P2A_CTRL)	+= aspeed-p2a-ctrl.o
 obj-$(CONFIG_ASPEED_XDMA)	+= aspeed-xdma.o
 obj-$(CONFIG_ASPEED_UDMA)	+= aspeed-udma.o
+obj-$(CONFIG_ASPEED_VIDEO)	+= ast_video.o
 obj-$(CONFIG_ASPEED_ESPI)	+= aspeed-espi.o \
 				aspeed-espi-peripheral.o \
 				aspeed-espi-vw.o \
