sdhci: Update SD card driver
- Fix proglem about SD clock between A1 and A2.
  A1: The maximum clk is 100MHz when clock source is HCLK.
  A2: The maximum clk is 200MHz when clock source is HCLK.
- Adjust capibilty for SDR104

Change-Id: I4f3c6606ed7dfc4e32c49a88a7d8647e48726d65
Signed-off-by: Chin-Ting Kuo <chin-ting_kuo@aspeedtech.com>

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -1107,8 +1107,10 @@
 					interrupts = <GIC_SPI 43 IRQ_TYPE_LEVEL_HIGH>;
 					sdhci,auto-cmd12;
 					clocks = <&syscon ASPEED_CLK_SDIO>;
-					power-gpio = <&gpio0 ASPEED_GPIO(V, 0) GPIO_ACTIVE_LOW>;
-					power-switch-gpio = <&gpio0 ASPEED_GPIO(V, 1) GPIO_ACTIVE_LOW>;
+					power-gpio = <&gpio0 ASPEED_GPIO(V, 0)
+								GPIO_ACTIVE_HIGH>;
+					power-switch-gpio = <&gpio0 ASPEED_GPIO(V, 1)
+								GPIO_ACTIVE_HIGH>;
 					pinctrl-names = "default";
 					pinctrl-0 = <&pinctrl_sd1_default>;
 					status = "disabled";
@@ -1120,8 +1122,10 @@
 					interrupts = <GIC_SPI 43 IRQ_TYPE_LEVEL_HIGH>;
 					sdhci,auto-cmd12;
 					clocks = <&syscon ASPEED_CLK_SDIO>;
-					power-gpio = <&gpio0 ASPEED_GPIO(V, 2) GPIO_ACTIVE_LOW>;
-					power-switch-gpio = <&gpio0 ASPEED_GPIO(V, 3) GPIO_ACTIVE_LOW>;
+					power-gpio = <&gpio0 ASPEED_GPIO(V, 2)
+								GPIO_ACTIVE_HIGH>;
+					power-switch-gpio = <&gpio0 ASPEED_GPIO(V, 3)
+								GPIO_ACTIVE_HIGH>;
 					pinctrl-names = "default";
 					pinctrl-0 = <&pinctrl_sd2_default>;
 					status = "disabled";
