ARM: dts: aspeed-g6: Add SCU phandle for eSPI node
eSPI driver will drop its own probing when AST26xx
is actually executing in LPC mode. This patch add
the DTS phandle to SCU controller for the LPC/eSPI
mode identification.

Signed-off-by: Chia-Wei, Wang <chiawei_wang@aspeedtech.com>
Change-Id: I538f2cf2057a4a27bf74f4cccc8e139c853a581a

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -698,6 +698,7 @@
 							      <&gpio0 ASPEED_GPIO(W, 7) IRQ_TYPE_EDGE_FALLING>;
 					clocks = <&syscon ASPEED_CLK_GATE_ESPICLK>;
 					resets = <&syscon ASPEED_RESET_ESPI>;
+					aspeed,scu = <&syscon>;
 					status = "disabled";
 				};
 
