v2 dt-bindings: Add bindings for aspeed pwm-tach and pwm.
This patch adds device bindings for aspeed pwm-tach device which is a
multi-function device include pwn and tach function and pwm device which
should be the sub-node of pwm-tach device.

Signed-off-by: Billy Tsai <billy_tsai@aspeedtech.com>
Change-Id: I18d9dea14c3a04e1b7e38ffecd49d45917b9b545

--- a/Documentation/devicetree/bindings/pwm/aspeed,ast2600-pwm.yaml
+++ b/Documentation/devicetree/bindings/pwm/aspeed,ast2600-pwm.yaml
@@ -21,24 +21,21 @@ properties:
   "#pwm-cells":
     const: 3
 
-pwm-cells:
-  - channel
-# period in terms of nanoseconds
-  - period
-# PWM_POLARITY_INVERTED
-  - flag
+  reg:
+    maxItems: 1
 
 additionalProperties: false
 
 examples:
   - |
-    // The PWM should be a subnode of a "aspeed,ast2600-pwn-tach" compatible node.
-    pwm_tach@1e610000 {
-      compatible = "aspeed,ast2600-pwm-tach", "simple-mfd", "syscon";
+    // The PWM should be a subnode of a "aspeed,ast2600-pwm-tach" compatible
+    // node.
+    pwm_tach: pwm_tach@1e610000 {
+      compatible = "aspeed,ast2600-pwm-tach", "syscon", "simple-mfd";
       #address-cells = <1>;
       #size-cells = <1>;
       reg = <0x1e610000 0x100>;
-      ranges = <0 0x1e610000 0x100>;
+
       pwm: pwm@0 {
         compatible = "aspeed,ast2600-pwm";
         #pwm-cells = <3>;
