--- a/Documentation/devicetree/bindings/mfd/aspeed,ast2600-pwm-tach.yaml
+++ b/Documentation/devicetree/bindings/mfd/aspeed,ast2600-pwm-tach.yaml
@@ -2,13 +2,14 @@
 # Copyright (C) 2021 ASPEED, Inc.
 %YAML 1.2
 ---
-$id: http://devicetree.org/schemas/mfd/aspeed,ast2600-pwn-tach.yaml#
+$id: http://devicetree.org/schemas/mfd/aspeed,ast2600-pwm-tach.yaml#
 $schema: http://devicetree.org/meta-schemas/core.yaml#
 
 title: PWM Tach controller Device Tree Bindings
 
 description: |
-  The PWM Tach controller is represented as a multi-function device which includes:
+  The PWM Tach controller is represented as a multi-function device which
+  includes:
     PWM
     Tach
 
@@ -17,24 +18,31 @@ maintainers:
 
 properties:
   compatible:
-    - items:
-        - enum:
-            - aspeed,ast2600-pwn-tach
-        - const: syscon
-        - const: simple-mfd
+    items:
+      - enum:
+          - aspeed,ast2600-pwm-tach
+      - const: syscon
+      - const: simple-mfd
   reg:
     maxItems: 1
+  "#address-cells":
+    const: 1
+  "#size-cells":
+    const: 1
 
 required:
   - compatible
   - reg
+  - "#address-cells"
+  - "#size-cells"
 
-additionalProperties: false
+additionalProperties:
+  type: object
 
 examples:
   - |
     pwm_tach: pwm_tach@1e610000 {
-      compatible = "aspeed,ast2600-pwm-tach", "simple-mfd", "syscon";
+      compatible = "aspeed,ast2600-pwm-tach", "syscon", "simple-mfd";
       #address-cells = <1>;
       #size-cells = <1>;
       reg = <0x1e610000 0x100>;
@@ -45,7 +53,7 @@ examples:
         reg = <0x0 0x100>;
       };
 
-      tach: tach@0 {
+      tach: tach@1 {
         compatible = "aspeed,ast2600-tach";
         reg = <0x0 0x100>;
       };
