v5 dt-bindings: Add bindings for aspeed pwm-tach.
This patch adds device binding for aspeed pwm-tach device which is a
multi-function device include pwn and tach function and pwm/tach device
bindings which should be the sub-node of pwm-tach device.

Signed-off-by: Billy Tsai <billy_tsai@aspeedtech.com>
Change-Id: Ic55955d0ab1eaae45af48cf8ab8b9f97a883b9b0

--- a/Documentation/devicetree/bindings/mfd/aspeed,ast2600-pwm-tach.yaml
+++ b/Documentation/devicetree/bindings/mfd/aspeed,ast2600-pwm-tach.yaml
@@ -36,12 +36,14 @@ required:
   - clocks
   - resets
 
-child-node:
+patternProperties:
   "^pwm(@[0-9a-f]+)?$":
     $ref: ../pwm/aspeed,ast2600-pwm.yaml
 
   "^tach(@[0-9a-f]+)?$":
     $ref: ../hwmon/aspeed,ast2600-tach.yaml
+
+additionalProperties: false
 
 examples:
   - |
