v7 dt-bindings: Add bindings for aspeed pwm-tach.
Change since v6:
- Add blank line between each DT property.
- Change the sub-node name from fan to tach-ch.

Signed-off-by: Billy Tsai <billy_tsai@aspeedtech.com>
Change-Id: If7be06e52c90f37006bca6ce742e7282025d831b

--- a/Documentation/devicetree/bindings/mfd/aspeed,ast2600-pwm-tach.yaml
+++ b/Documentation/devicetree/bindings/mfd/aspeed,ast2600-pwm-tach.yaml
@@ -23,10 +23,13 @@ properties:
           - aspeed,ast2600-pwm-tach
       - const: syscon
       - const: simple-mfd
+
   reg:
     maxItems: 1
+
   clocks:
     maxItems: 1
+
   resets:
     maxItems: 1
 
@@ -74,7 +77,7 @@ examples:
         #size-cells = <0>;
         pinctrl-names = "default";
         pinctrl-0 = <&pinctrl_tach0_default>;
-        fan@0 {
+        tach-ch@0 {
           reg = <0>;
           aspeed,min-rpm = <1000>;
           aspeed,pulse-pr = <2>;
