ARM: dts: aspeed-g6: rename property "ni3cs" to "num-i3cs"
Rename the property to make it clear to understand what it wants to
describe.

Signed-off-by: Dylan Hung <dylan_hung@aspeedtech.com>
Change-Id: I4486165115f4227c701bdc417d56332c63217cc2

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -1723,7 +1723,7 @@
 		reg = <0x0 0x1000>;
 		compatible = "aspeed,ast2600-i3c-global";
 		resets = <&syscon ASPEED_RESET_I3C>;
-		ni3cs = <6>;
+		num-i3cs = <6>;
 		pull-up-resistors = <2000 2000 2000 2000 2000 2000>;
 	};
 
